included content in index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Jose Enrico Manalac</title>
+		<link rel="stylesheet" type="text/css" href="mystyle.css">
+	</head>
+	<body>
+		<section>
+			<!--add picture-->
+			<h1>Jose Enrico F. Manalac</h1>
+			<h2>Kurt</h2>
+		</section>
+		<section>
+			<h1>Favorite CMSC subject so far and why</h1>
+			<p>
+				My favorite CMSC subject so far is CMSC 123, because I learned a lot of basic coding practices, conecpts, and approaches that laid the groundwork for my future in CMSC.  It also helped me adapt to different programming languages' syntax and the like.
+			</p>
+		</section>
+		<section>
+			<h1>Favorite GE so far and why</h1>
+			<p>
+				When I took SPCM 1 during A.Y. 2017-2018 midyear, I never realized it would be the last of its kind, and the most memorable one.  The professor was engaging, technical, and most of all, hilarious.  Despite lasting for 6 weeks, I got close to my classmates and remain close even now.
+			</p>
+		</section>
+		<section>
+			<h1>Favorite PL and why</h1>
+			<p>
+				When I first explored the world of Computer Science, I started out with C++, but now after learning multiple PLs, I learned to love C.  Reason being, it was the closest to C++ as well as being the best PL that laid the foundation of understanding syntax of programming.
+			</p>
+		</section>
+		<section>
+			<h1>Favorite Food</h1>
+			<p>
+				Free food.  Except vegetables.  Eww...
+			</p>
+		</section>
+	</body>
+</html>
