included picture of self

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<section>
-			<!--add picture-->
+			<img src="images/kurt.jpg" alt="Profile Pic" style="width: 500px; height: 500px; display: block;">
 			<h1>Jose Enrico F. Manalac</h1>
 			<h2>Kurt</h2>
 		</section>
