added extra features e.g. hobbies and dream

--- a/index.html
+++ b/index.html
@@ -34,5 +34,17 @@
 				Free food.  Except vegetables.  Eww...
 			</p>
 		</section>
+		<section>
+			<h1>Hobbies</h1>
+			<p>
+				I love playing videogames, reading manga, watching anime and tv series, and practicing photography.
+			</p>
+		</section>
+		<section>
+			<h1>What was your childhood dream</h1>
+			<p>
+				I wanted to be a firefighter because they were cool looking and had a big red truck.  I like the color red.  A lot.
+			</p>
+		</section>
 	</body>
 </html>
